# RollWireCal

./: .codecov.yml  .gitignore  CMakeLists.txt  Kentbeck.md  Note.md  README.md  _.txt  codecov.yml  plan.md
.cache/clangd/index/: Motor.h.70FD75BD3627D808.idx  Motor.h.AEDA22E178B18C7F.idx  MotorTest.cpp.715FE4546BEFC2A4.idx  MotorTest.cpp.C51450FCB347264A.idx  RollWireCalculator.cpp.4C9F3682ACE3DBD4.idx  RollWireCalculator.cpp.F9CE085B26660578.idx  RollWireCalculator.h.3896B842324D3C1B.idx  RollWireCalculator.h.96878626D2C02FB1.idx  RollWireCalculator.h.D669B5BA4B62DB4A.idx  RollWireCalculatorTest.cpp.27F1A33FEE856AE5.idx  RollWireCalculatorTest.cpp.7EAEB08F16142A03.idx  RollWireMover.cpp.ADEE413B5655DF0E.idx  RollWireMover.h.452B0F39776DFC12.idx  RollWireMoverTest.cpp.4D7EC98FF7EB4E5E.idx  SimMotor.cpp.322383DAAD95895C.idx  SimMotor.cpp.E41DFA89934EDB07.idx  SimMotor.h.210FC31911C29D26.idx  SimMotor.h.51547D00302BAC33.idx  SimMotorTest.cpp.2623BC5FA5C30C28.idx  SimMotorTest.cpp.5C3781D2F0AADD90.idx
.claude/: settings.local.json
.claude/commands/: go-mover.md  go.md  tidy.md
.github/workflows/: ci.yml
Lib/RollWireCalculator/: CMakeLists.txt  Note.md  plan.md
Lib/RollWireCalculator/.claude/commands/: go.md  green.md  red.md  refactor.md
Lib/RollWireCalculator/examples/: basic_usage.cpp  inner_radius_change.cpp
Lib/RollWireCalculator/include/: RollWireCalculator.h
Lib/RollWireCalculator/src/: RollWireCalculator.cpp
Lib/RollWireCalculator/test/: RollWireCalculatorTest.cpp
Lib/RollWireMover/: CMakeLists.txt  Note.md  PRD.md  plan.md
Lib/RollWireMover/.claude/commands/: go.md
Lib/RollWireMover/include/: Motor.h  RollWireCalculator.h  RollWireMover.h  SimMotor.h
Lib/RollWireMover/src/: RollWireMover.cpp  SimMotor.cpp
Lib/RollWireMover/test/: RollWireMoverTest.cpp  SimMotorTest.cpp
docs/RollWireCalculator/: Note.md  PRD.md  plan.md
docs/RollWireMover/: Note.md  PRD.md  plan.md
include/: RollWireCalculator.h  SimMotor.h
src/: RollWireCalculator.cpp  SimMotor.cpp
test/: MotorTest.cpp  RollWireCalculatorTest.cpp  SimMotorTest.cpp
